Fix buttons spacing in buttons group when one of them is a link

--- a/app/assets/stylesheets/_layout-molecules.scss
+++ b/app/assets/stylesheets/_layout-molecules.scss
@@ -71,7 +71,7 @@
   padding-bottom: 4px;
   .btn {
     float: left;
-    margin-right: 16px;
+    margin-right: 16px !important;
     &:last-of-type {
       margin-right: 0;
     }
